# ds-ai-assignments-Oleksii-Burianov

./: README.md  Week5_Presentation.pptx
project/: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  pyproject.toml
project/data/: .gitkeep  README.md  README_RU.md
project/scripts/: benchmark_demo.py  benchmark_models.py  download_dataset.py  validate_week6.py
project/src/agents/: __init__.py  crew.py  definitions.py  models.py  research_assistant.py
project/src/llm/: __init__.py  base.py  cerebras_client.py  client.py  mistral_client.py  models.py  ollama_client.py  openrouter_client.py
project/src/prompts/: __init__.py  manager.py  strategies.py
project/src/rag/: __init__.py  document_processor.py  embeddings.py  evaluation.py  models.py  pipeline.py  retriever.py  vector_store.py
project/src/rag/chunking/: __init__.py  base.py  fixed_size.py  recursive.py
project/src/routing/: __init__.py  analyzer.py  models.py  router.py  strategies.py
project/src/tools/: __init__.py  agent_tools.py
project/src/ui/: __init__.py  app.py
project/tests/: test_agents.py
weeks/week1/: topic1.ipynb  topic2.ipynb
weeks/week2/: ML_Course_summary.pptx  README.md  topic3.ipynb  topic4.ipynb  topic5.ipynb
weeks/week3/: Customer_Churn_Analysis.pptx  week3 final.pptx  week3.pptx  working_with_dataset.ipynb
weeks/week4/: analysis_report.txt  feedback_analysis.py  final presentation.pptx  sentiment_stats.txt  topics.txt
